feat: beauty html

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
   <body></body>
   <script src="./index.js"></script>
   <script>
-    document.querySelectorAll('[data-id="Div_75"]').forEach(function(element) {
+    document.querySelectorAll('[data-id="div_276"]').forEach(function(element) {
       element.addEventListener("click", function(e) {
         var findUrl = function(ele) {
           var url = ele.getAttribute("data-url");
